Closed
Bug 1265249
Opened 9 years ago
Closed 9 years ago
Mouse cursor only shows part of the dragged selection when it contains multiple ranges
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect, P4)
Tracking
()
VERIFIED
FIXED
mozilla50
People
(Reporter: MatsPalmgren_bugz, Assigned: jwatt)
References
Details
(Keywords: regression, testcase, Whiteboard: btpp-followup-2016-05-02)
Attachments
(3 files)
|
472 bytes,
text/html
|
Details | |
|
495 bytes,
text/html
|
Details | |
|
1.23 KB,
patch
|
bas.schouten
:
review+
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
STR: see testcase
Bug occurs in Firefox 45 (and Nightly) on Linux64.
| Reporter | ||
Comment 1•9 years ago
|
||
My first guess would be that the bug is in PresShell::RenderSelection or related functions:
http://mxr.mozilla.org/mozilla-central/source/layout/base/nsPresShell.cpp?rev=b3ff29311975#5048
Investigating what the display lists looks like there is probably a good first step.
(It looks like there are already DEBUG code there for that purpose.)
| Reporter | ||
Comment 2•9 years ago
|
||
| testcase | ||
A similar test using blocks instead of a table gives a slightly different
result. Now I see the A's and the B's but not the C's.
It looks like the offset for the later ranges are off so that they
render outside the clip rect.
Comment 3•9 years ago
|
||
I do not know if this is related, but dragging text shows even an icon here.
Reported here: https://bugzilla.mozilla.org/show_bug.cgi?id=1265254
Comment 4•9 years ago
|
||
I see this on Windows with nightly, too.
Is this a regression?
Flags: needinfo?(mats)
Whiteboard: btpp-followup-2016-04-29
Comment 6•9 years ago
|
||
QA, can you determine of this is a regression?
Keywords: qawanted,
regressionwindow-wanted
Whiteboard: btpp-followup-2016-04-29 → btpp-followup-2016-05-02
Comment 7•9 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4e5bfc7ba963&tochange=6cc38353cfa4
Regressed by: Bug 1064056
Blocks: 1064056
Keywords: regressionwindow-wanted
Updated•9 years ago
|
Keywords: regression
Comment 8•9 years ago
|
||
Thanks for the regression window!
Jonathan, what do you think? Bug 1064056 landed over 18 months ago so it's probably not possible/easy to back out now ;)
Andrew, do we care about this for 48?
Flags: needinfo?(overholt)
Comment 10•9 years ago
|
||
I somehow never needinfo'd jwatt.
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #9)
> Andrew, do we care about this for 48?
I imagine that we've lived with this for this long that we shouldn't hold 48 for it.
Flags: needinfo?(overholt) → needinfo?(jwatt)
| Assignee | ||
Comment 11•9 years ago
|
||
Specifically this regression was caused by this chunk:
https://hg.mozilla.org/integration/mozilla-inbound/rev/125aa9f4bd3d#l2.31
Previously we were using AutoPushTranslation which would reset to initialTM then apply a translation during each loop, whereas after the patch we are now incorrectly accumulating transforms into initialTM each loop.
Assignee: nobody → jwatt
Status: NEW → ASSIGNED
Flags: needinfo?(jwatt)
Attachment #8763923 -
Flags: review?(bas)
Updated•9 years ago
|
Version: Trunk → 35 Branch
Updated•9 years ago
|
Flags: needinfo?(bugs)
Updated•9 years ago
|
Attachment #8763923 -
Flags: review?(bas) → review+
Updated•9 years ago
|
Comment 12•9 years ago
|
||
Pushed by jwatt@jwatt.org:
https://hg.mozilla.org/integration/mozilla-inbound/rev/07322a610cf8
Fix painting of drag selections that contain multiple ranges. r=Bas
Comment 13•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment 14•9 years ago
|
||
Bas could you fill the uplift request to beta as it is affected? Thanks
Jonathan is AFK until October
thanks
Flags: needinfo?(bas)
Comment 15•9 years ago
|
||
Too late for 48 anyway
Comment 16•9 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #15)
> Too late for 48 anyway
Woops.. do you still want this uplifted anywhere?
Flags: needinfo?(bas)
Comment 17•9 years ago
|
||
(In reply to Bas Schouten (:bas.schouten) from comment #16)
> (In reply to Sylvestre Ledru [:sylvestre] from comment #15)
> > Too late for 48 anyway
>
> Woops.. do you still want this uplifted anywhere?
(i.e. 49)
Comment 19•9 years ago
|
||
Comment on attachment 8763923 [details] [diff] [review]
patch
Approval Request Comment
[Feature/regressing bug #]: 1064056
[User impact if declined]: Incorrect display of selected range
[Describe test coverage new/current, TreeHerder]: Nightly & Aurora
[Risks and why]: Very low, corrects transform
[String/UUID change made/needed]: None
Flags: needinfo?(bas)
Attachment #8763923 -
Flags: approval-mozilla-beta?
Comment 20•9 years ago
|
||
Comment on attachment 8763923 [details] [diff] [review]
patch
Review of attachment 8763923 [details] [diff] [review]:
-----------------------------------------------------------------
This patch fixes a regression. Take it in 49 beta.
Attachment #8763923 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 21•9 years ago
|
||
| bugherder uplift | ||
Comment 22•9 years ago
|
||
Reproduced the initial issue with the attached testcases on Windows 10 x64 using Fx 48.0.2.
Confirming that the text selection is properly displayed while dragged on Windows 10x64, Ubuntu 12.04 x86 and Mac OS X 10.11.6 using:
* Firefox 49.0b10, build ID 20160902105049
* Latest 50.0a2 Aurora, build ID 20160905004005.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
QA Contact: cornel.ionce
Updated•8 years ago
|
Flags: needinfo?(bugs)
You need to log in
before you can comment on or make changes to this bug.
Description
•