Bug 1265249 - Fix painting of drag selections that contain multiple ranges. r=Bas